# wikijs-mcp-server

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  wikijs.schema
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_comprehensive_coverage.py  test_config.py  test_crypto.py  test_direct_handlers.py  test_extracted_handler_methods.py  test_extracted_handlers.py  test_graphql_compatibility.py  test_handler_paths.py  test_handler_simulation.py  test_import_coverage.py  test_main.py  test_module_level.py  test_server.py  test_server_compatibility.py  test_server_coverage.py  test_server_handlers.py  test_server_integration.py
wikijs_mcp/: __init__.py  cli.py  client.py  config.py  crypto.py  server.py
